# investment-trader

./: .env.example  .gitignore  CLAUDE.md  TODO.md  docker-compose.yml  main.py  phase1_claude_code_prompt.md  pyproject.toml
db/init/: 01_bars.sql
docs/handoff/: 2026-07-02-session-handoff.md  2026-07-03-next-phase-handoff.md
docs/prompts/: dashboard-ui-revamp.md
docs/superpowers/plans/: 2026-07-01-dashboard-legend-revamp.md  2026-07-02-customizable-widget-dashboard.md  2026-07-03-nn-price-predictor-plan.md  2026-07-03-stock-screener-plan.md
scripts/: backfill_history.py  run_screener.py
src/broker/: __init__.py  ib_broker.py  order.py
src/dashboard/: app.py
src/data_ingestion/: __init__.py  feed.py  store.py
src/ml/: features.py  model.py  service.py  trainer.py
src/risk/: __init__.py  checks.py  engine.py
src/screener/: data.py  metrics.py  scorer.py  service.py  universe.py
src/strategies/: __init__.py  base.py  noop_strategy.py  registry.py  sma_crossover.py
src/utils/: __init__.py  config.py  logging.py
tests/: conftest.py
tests/dashboard/: test_app.py  test_ml_api.py  test_portfolio_history.py  test_screener_api.py  test_state.py
tests/data_ingestion/: test_feed.py  test_store_portfolio.py
tests/ml/: test_features.py  test_model.py  test_service.py  test_trainer.py
tests/risk/: test_checks.py  test_engine.py
tests/screener/: test_data.py  test_metrics.py  test_scorer.py  test_service.py  test_universe.py
tests/scripts/: test_backfill_history.py  test_run_screener.py
tests/strategies/: test_registry.py  test_sma_crossover.py
(+18 files in other folders)
