[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hedge-quant"
version = "0.1.0"
description = "Multi-asset quantitative trading system"
requires-python = ">=3.11"
dependencies = [
    "ib-insync>=0.9.86",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pandas>=2.2",
    "numpy>=1.26",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.2",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-python-dateutil",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
